# ContextLens

./: .gitignore  README.md  dev.sh  render.yaml
api/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/controller/: auth_controller.py  chat_controller.py  query_controller.py  rag_controller.py  speech_controller.py
api/docs/: API_DOCUMENTATION.md  plan.md
api/lib/: config.py  security.py  utils.py
api/routes/: auth.py  chat.py  documents.py  export.py  query_routes.py  rag.py  speech.py  visualization.py
api/schema/: chat_schema.py  query_schema.py  rag_schema.py  speech_schema.py  token_schema.py  user_schema.py  visualization_schema.py
api/service/features/: chat_session_service.py  database_visualization_service.py  file_processing_service.py  pdf_export_service.py  speech_service.py  sql_analysis_service.py  sql_generation_service.py  user_documents_service.py
api/service/infrastructure/: auth_service.py  database_service.py  user_service.py
api/service/monitoring/: usage_tracker.py
api/service/rag/: embedding_service.py  gemini_service.py  groq_service.py  parent_chunks_service.py  pinecone_service.py  rag_service.py  rerank_service.py
documentation/: api_architecture.md  chart_config_example.json
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  test-connection.js  vite.config.js
frontend/docs/: DESIGN_SYSTEM.md  FRONTEND_DOCUMENTATION.md
frontend/src/: App.jsx  index.css
scripts/: create-initial-commits.sh
tests/: README.md
(+58 files in other folders)
